# CPRReader

./: CMakeLists.txt
CprReader/: CMakeLists.txt  CPRReader.cpp  CPRReader_old.c_pp  CPRRiff.cpp  CPRRiff.h  FSHeader.h  MemFile.cpp  ScanDir.cpp  ScanDir.h
cmake/: ChCommonFuncs.cmake
